<resources>
    <string name="mtext16_1034631">Dodge Hall</string>
    <string name="mtext4_17556">DESCRIPTION: \nWorried about the required skill level? If you know basic HTML &amp; CSS, then this event is for you.</string>
    <string name="mtext12_483084">Curry Student Center</string>
    <string name="mbutton3_1018628">RECOMMENDED</string>
    <string name="mbutton2_92677">Upcoming</string>
    <string name="mtext7_96703">ATTENDEES:</string>
    <string name="mtext_488116">MENU</string>
    <string name="mtext13_677182">SIMILIAR OPPORTUNITIES:</string>
    <string name="mtext7_275386">Intellectual Agility</string>
    <string name="mbutton2_232600">THIS WEEK</string>
    <string name="mtext_353415">B. Cooper</string>
    <string name="mtext17_807241">40 PTS</string>
    <string name="mfixedbutton_117987"></string>
    <string name="mtext4_23052">100 PTS</string>
    <string name="mtext18_186965">FRI, APR 1, 19:00</string>
    <string name="mtext7_279665">Web development tips &amp; tricks</string>
    <string name="mtext18_430559">60 PTS\n</string>
    <string name="mfixedbutton_715661"></string>
    <string name="mbutton2_189291">REGISTER</string>
    <string name="mtext_347168">HOME</string>
    <string name="mtext12_892550">Curry Student Center</string>
    <string name="placeholder_mfield3_203016">First Name</string>
    <string name="mbutton_807099">Terms &amp; Conditions\n</string>
    <string name="mtext10_406616">C Kent</string>
    <string name="mtext18_770671">FRI, APR 1, 19:00</string>
    <string name="mtext8_212361">Dodge Hall\n</string>
    <string name="mtext11_173207">Well-Being</string>
    <string name="mtext10_127017">FRI, APR 1, 19:00</string>
    <string name="mbutton_272254">ALL</string>
    <string name="mbutton4_192414">Workshop</string>
    <string name="mtext_125717">MY OPPORTUNITIES</string>
    <string name="mtext3_817578">BIO: I am awesome!!!</string>
    <string name="mtext13_999215">40 PTS\n</string>
    <string name="mtextarea_283984"> I am awesome!</string>
    <string name="mtext17_718137">100 PTS</string>
    <string name="mbutton_125355">REGISTER</string>
    <string name="mtext10_349236">C Kent</string>
    <string name="mtext13_201014">40 PTS\n</string>
    <string name="mtext18_128957">MON, MAY 2, 15:00</string>
    <string name="mtext3_961064">Are safe injection facilities for heroin users a step in the right direction?</string>
    <string name="mtext16_685625">Dodge Hall</string>
    <string name="mbutton6_741308">Volunteer</string>
    <string name="mbutton6_791607">Volunteer</string>
    <string name="mtext7_371485">Web development tips &amp; tricks</string>
    <string name="mtext7_399640">ATTENDEES:</string>
    <string name="mbutton4_257198">Public</string>
    <string name="mbutton3_126709">Completed</string>
    <string name="mtext_128662">Social Consciousness &amp; Interpersonal Commitment</string>
    <string name="mbutton7_756735">Talk</string>
    <string name="mtext4_968863">Last Name: </string>
    <string name="mbutton_753737">In Progress</string>
    <string name="mtext_757556">100 PTS\n</string>
    <string name="app_name">MSD</string>
    <string name="mbutton4_1043227">Saved</string>
    <string name="mbutton3_314748">Completed</string>
    <string name="mtext14_823159">Web development tips &amp; tricks</string>
    <string name="mtext9_809914">OPPORTUNITY DETAIL</string>
    <string name="mbutton2_13464">Save</string>
    <string name="mbutton4_619531">Saved</string>
    <string name="mbutton3_232695">Completed</string>
    <string name="mtext5_561721">BIO: </string>
    <string name="placeholder_mfield4_555896">Last Name</string>
    <string name="mtext4_328089">60 points to the next level</string>
    <string name="mtext8_966895">A Johnson\n</string>
    <string name="mtext9_350429">OPPORTUNITY DETAIL</string>
    <string name="mtext5_413259">LOCATION:\nEll Hall</string>
    <string name="mtext5_153280">LOCATION:\nCabot Cage and Solomon Court</string>
    <string name="mbutton6_720970">Volunteer</string>
    <string name="mtext6_158255">THU, MAR 24, 18:30</string>
    <string name="mtext20_1047403">Curry Student Center</string>
    <string name="mbutton2_120772">Register\n</string>
    <string name="mtext6_221438">THU, MAR 24, 18:30</string>
    <string name="mbutton2_1037082">MY INFO</string>
    <string name="mtext5_784287">40/1000 pts</string>
    <string name="mbutton_960114">ALL</string>
    <string name="mbutton2_586834">THIS WEEK</string>
    <string name="mtext9_1019006">OPPORTUNITY DETAIL</string>
    <string name="mtext5_875221">1</string>
    <string name="mtext11_994194">D Gold\n</string>
    <string name="mtext_862113">B Lee\n</string>
    <string name="mtext1_446553">Are safe injection facilities for heroin users a step in the right direction?</string>
    <string name="mtext10_75264">Professional &amp; Personal Effectiveness</string>
    <string name="mbutton3_806651">RECOMMENDED</string>
    <string name="placeholder_mfield_1024299">Username</string>
    <string name="mtext2_87113">Thu, Feb 4, 12:00</string>
    <string name="mtext1_326016">April Fool Special Event!</string>
    <string name="mtext3_697003">Career Fair</string>
    <string name="mtext2_943342">Thu, Feb 4, 12:00</string>
    <string name="mtext_855313">100 PTS\n</string>
    <string name="mtext_166808">MY INFO</string>
    <string name="mbutton4_576492">Workshop</string>
    <string name="mtext15_263359">April Fool Special Event!</string>
    <string name="mbutton2_77460">Upcoming</string>
    <string name="mtext12_203825">Curry Student Center</string>
    <string name="mbutton_775137">Upload Photo</string>
    <string name="mtext4_50472">DESCRIPTION:\nSay Hi to April. This is a exeiting event to welcome the first day of April, also celebrate spring season.</string>
    <string name="mfixedbutton_808912"></string>
    <string name="placeholder_mfield_514616">Username</string>
    <string name="mtext21_669688">40 PTS</string>
    <string name="mbutton_625199">Edit</string>
    <string name="mtext2_489097">Showing search result for: Talk</string>
    <string name="mtext12_962173">E Cooper</string>
    <string name="mbutton_64510">HOME</string>
    <string name="mtext5_112126">1</string>
    <string name="mtext21_197082">60 PTS</string>
    <string name="mtext17_603511">Ell Hall</string>
    <string name="mtext8_1003245">Dodge Hall\n</string>
    <string name="mbutton4_944200">LOG OUT</string>
    <string name="mtext8_926745">A Johnson\n</string>
    <string name="mtext6_464813">CONTACT:\n Mr. Joe Smith\n (123)-456-7890\nsmith.j@husky.neu.edu</string>
    <string name="mtext11_146505">April Fool Specil Event!</string>
    <string name="mtext21_663911">40 PTS</string>
    <string name="mtext18_933828">MON, MAY 2, 15:00</string>
    <string name="mtext2_95189">FRI, APR 1, 19:00</string>
    <string name="mbutton7_47544">Talk</string>
    <string name="mtext3_44819">First Name: </string>
    <string name="mbutton5_1016839">CO-OP</string>
    <string name="mtext2_317050">MON, MAY 2, 15:00</string>
    <string name="mtext11_188999">D Gold\n</string>
    <string name="mtext2_965595">HOME</string>
    <string name="mtext_269120">MY OPPORTUNITIES</string>
    <string name="mtext8_801738">A Johnson\n</string>
    <string name="mtext5_1034765">LOCATION:\nCurry Student Center</string>
    <string name="mtext14_944062">Web development tips &amp; tricks</string>
    <string name="mbutton4_923757">Workshop</string>
    <string name="mtext_790106">B Lee\n</string>
    <string name="mtext2_412300">Showing search result for: April</string>
    <string name="mtext7_756441">Web development tips &amp; tricks</string>
    <string name="mtext16_347280">Dodge Hall</string>
    <string name="mtext11_534881">April Fool Specil Event!</string>
    <string name="mbutton_659954">REGISTER</string>
    <string name="mtext1_819579">Are safe injection facilities for heroin users a step in the right direction?</string>
    <string name="mtext2_894793">CATLR Gamified Learning Tracker</string>
    <string name="mbutton_263001">In Progress</string>
    <string name="mtext_236151">Level 3</string>
    <string name="mtext3_656533">Alice</string>
    <string name="mtext16_218300">Curry Student Center</string>
    <string name="mtext11_787233">D Gold\n</string>
    <string name="mtext6_984895">CONTACT:\n Mr. Joe Smith\n (123)-456-7890\nsmith.j@husky.neu.edu</string>
    <string name="mfixedbutton_606398"></string>
    <string name="mtext4_529050">100 PTS</string>
    <string name="mfixedbutton_362467"></string>
    <string name="mtext2_881985">THU, MAR 29, 18:30\n</string>
    <string name="mbutton2_248298">Upcoming</string>
    <string name="mtext14_490345">Categories:</string>
    <string name="mtext17_911192">100 PTS</string>
    <string name="mtext20_774783">Ell Hall</string>
    <string name="mtext10_263206">C Kent</string>
    <string name="mtext11_964505">April Fool Specil Event!</string>
    <string name="mtext9_830773">MY INFO</string>
    <string name="mtext2_184223">MY OPPORTUNITIES</string>
    <string name="mbutton3_1001680">Cancel</string>
    <string name="mtext6_1034144">THU, MAR 24, 18:30</string>
    <string name="mtext_117502">B Lee\n</string>
    <string name="mtext2_370270">A. Johnson</string>
    <string name="mtext3_553113">BIO: \nI am a senior undergrad student major in Digital Media. Huge fan in pirate!!! \n\nHere’s a link to my webPage:\nhttp://guesswhat.com/a.johnson</string>
    <string name="mtext3_134146">Career Fair</string>
    <string name="mtext15_80386">THU, MAR 24, 18:30</string>
    <string name="mtext12_236331">E Cooper</string>
    <string name="mtext13_810045">SIMILIAR OPPORTUNITIES:</string>
    <string name="mtext6_147276">CONTACT:\nhttp://www.northeastern.edu/careers/about/</string>
    <string name="mtext2_362745">Good morning</string>
    <string name="mbutton_123058">In Progress</string>
    <string name="mtext13_556882">40 PTS\n</string>
    <string name="mbutton2_522524">THIS WEEK</string>
    <string name="mtext14_339380">Categories:</string>
    <string name="mbutton2_634162">THIS WEEK</string>
    <string name="mtext5_447152">LOCATION:\nCabot Cage and Solomon Court</string>
    <string name="mtext7_388097">Web development tips &amp; tricks</string>
    <string name="mtext15_32333">MON, MAY 2, 15:00\n</string>
    <string name="mtext4_552482">60 points to the next level</string>
    <string name="mtext2_720445">Alice Bob</string>
    <string name="mtext3_645306">April Fool Special Event!</string>
    <string name="mtext_621317">100 PTS\n</string>
    <string name="mtext4_666683">DESCRIPTION:\nWith heroin- related deaths jumping 39 percent from 2012 to 2013. Now one U.S. com­mu­nity has pro­posed an inno­v­a­tive strategy to help combat the scourge, which is rav­aging cities and towns nationwide.</string>
    <string name="mtext20_1002664">Ell Hall</string>
    <string name="mbutton_217544">ALL</string>
    <string name="mbutton_210923">In Progress</string>
    <string name="mtext9_586032">OPPORTUNITY DETAIL</string>
    <string name="mbutton5_1026808">CO-OP</string>
    <string name="mbutton3_388399">RECOMMENDED</string>
    <string name="mfixedbutton_808481"></string>
    <string name="mtext4_396209">Level 1</string>
    <string name="mtext10_551755">FRI, APR 1, 19:00</string>
    <string name="mbutton_740601">ALL</string>
    <string name="mtext4_577747">60 points to the next level</string>
    <string name="mbutton_523005">LOG IN</string>
    <string name="mtext7_538294">ATTENDEES:</string>
    <string name="mtext_846516">MSD</string>
    <string name="mtext2_997900">HOME</string>
    <string name="mtext14_711933">Web development tips &amp; tricks</string>
    <string name="mtext12_82010">RECOMMENDED OPPORTUNITIES\n</string>
    <string name="mtext8_356238">Global Mindset</string>
    <string name="mtext6_230414">Your Progress:</string>
    <string name="mtext15_566210">THU, MAR 24, 18:30</string>
</resources>