<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    android:paddingBottom="0dp"
    tools:context="com.neonto.exportedByUser_s969932972038319.MSD.MyInfoFragment" >
        <com.neonto.exportedByUser_s969932972038319.MSD.MyInfoBackgroundShapeView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/mBackgroundShape"
            android:layout_marginLeft="0.0mm"
            android:layout_marginTop="0.0mm"
        />
    
    <ScrollView
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:id="@+id/flowScrollView"
       >
      <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">
            <com.neonto.exportedByUser_s969932972038319.MSD.MyInfoImageView
                android:layout_width="737.0px"
                android:layout_height="432.0px"
                android:id="@+id/mImage"
                android:layout_marginLeft="0.0px"
                android:layout_marginTop="12.86mm"
            />
    
            <com.neonto.exportedByUser_s969932972038319.MSD.MyInfoImage3View
                android:layout_width="260.0px"
                android:layout_height="248.0px"
                android:id="@+id/mImage3"
                android:layout_marginLeft="0.0px"
                android:layout_marginTop="0.0mm"
            />
    
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/mtext2_720445"
                android:textColor="@color/base_text"
                android:gravity="center_horizontal"
                android:textSize="19.6dp"
                android:id="@+id/mText2"
                android:layout_marginLeft="0.0px"
                android:layout_marginTop="0.0mm"
            />
    
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/mtext3_817578"
                android:textColor="@color/base_text"
                android:gravity="center_horizontal"
                android:textSize="13.7dp"
                android:id="@+id/mText3"
                android:layout_marginLeft="0.0px"
                android:layout_marginTop="0.0mm"
            />
    
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mbutton_625199"
                android:textColor="@color/action"
                android:gravity="center_horizontal|center_vertical"
                android:textSize="15.6dp"
                android:drawableRight="@drawable/button_icon6251"
                android:background="@drawable/my_info_button"
                android:paddingLeft="4.3px"
                android:paddingRight="4.3px"
                android:id="@+id/mButton"
                android:layout_marginLeft="0.0px"
                android:layout_marginTop="0.35mm"
            />
    
            <com.neonto.exportedByUser_s969932972038319.MSD.MyInfoRectangleView
                android:layout_width="643.0px"
                android:layout_height="91.0px"
                android:id="@+id/mRectangle"
                android:layout_marginLeft="0.0px"
                android:layout_marginTop="1.76mm"
            />
    
            <com.neonto.exportedByUser_s969932972038319.MSD.MyInfoRectangle2View
                android:layout_width="213.0px"
                android:layout_height="84.86px"
                android:id="@+id/mRectangle2"
                android:layout_marginLeft="0.0px"
                android:layout_marginTop="0.0mm"
            />
    
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/mtext4_396209"
                android:textColor="@color/base_text"
                android:gravity="left"
                android:textSize="17.6dp"
                android:id="@+id/mText4"
                android:layout_marginLeft="0.0px"
                android:layout_marginTop="0.0mm"
            />
    
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/mtext5_784287"
                android:textColor="@color/base_text"
                android:gravity="right"
                android:textSize="17.6dp"
                android:id="@+id/mText5"
                android:layout_marginLeft="0.0px"
                android:layout_marginTop="0.0mm"
            />
    
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/mtext6_230414"
                android:textColor="@color/base_text"
                android:gravity="center_horizontal"
                android:textSize="19.6dp"
                android:id="@+id/mText6"
                android:layout_marginLeft="0.0px"
                android:layout_marginTop="0.97mm"
            />
    
            <com.neonto.exportedByUser_s969932972038319.MSD.MyInfoRectangle3View
                android:layout_width="638.41px"
                android:layout_height="506.23px"
                android:id="@+id/mRectangle3"
                android:layout_marginLeft="0.0px"
                android:layout_marginTop="0.0mm"
            />
    
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/mtext7_275386"
                android:textColor="@color/base_text"
                android:gravity="left"
                android:textSize="13.7dp"
                android:id="@+id/mText7"
                android:layout_marginLeft="0.0px"
                android:layout_marginTop="0.0mm"
            />
    
            <com.neonto.exportedByUser_s969932972038319.MSD.MyInfoRectangle4View
                android:layout_width="295.0px"
                android:layout_height="37.0px"
                android:id="@+id/mRectangle4"
                android:layout_marginLeft="0.0px"
                android:layout_marginTop="0.35mm"
            />
    
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/mtext8_356238"
                android:textColor="@color/base_text"
                android:gravity="left"
                android:textSize="13.7dp"
                android:id="@+id/mText8"
                android:layout_marginLeft="0.0px"
                android:layout_marginTop="0.35mm"
            />
    
            <com.neonto.exportedByUser_s969932972038319.MSD.MyInfoRectangleCopyView
                android:layout_width="130.85px"
                android:layout_height="37.0px"
                android:id="@+id/mRectangleCopy"
                android:layout_marginLeft="0.0px"
                android:layout_marginTop="0.35mm"
            />
    
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/mtext_128662"
                android:textColor="@color/base_text"
                android:gravity="left"
                android:textSize="13.7dp"
                android:id="@+id/mText"
                android:layout_marginLeft="0.0px"
                android:layout_marginTop="0.35mm"
            />
    
            <com.neonto.exportedByUser_s969932972038319.MSD.MyInfoRectangleCopy2View
                android:layout_width="192.47px"
                android:layout_height="37.0px"
                android:id="@+id/mRectangleCopy2"
                android:layout_marginLeft="0.0px"
                android:layout_marginTop="0.35mm"
            />
    
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/mtext10_75264"
                android:textColor="@color/base_text"
                android:gravity="left"
                android:textSize="13.7dp"
                android:id="@+id/mText10"
                android:layout_marginLeft="0.0px"
                android:layout_marginTop="0.35mm"
            />
    
            <com.neonto.exportedByUser_s969932972038319.MSD.MyInfoRectangleCopy3View
                android:layout_width="236.02px"
                android:layout_height="37.0px"
                android:id="@+id/mRectangleCopy3"
                android:layout_marginLeft="0.0px"
                android:layout_marginTop="0.35mm"
            />
    
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/mtext11_173207"
                android:textColor="@color/base_text"
                android:gravity="left"
                android:textSize="13.7dp"
                android:id="@+id/mText11"
                android:layout_marginLeft="0.0px"
                android:layout_marginTop="0.35mm"
            />
    
            <com.neonto.exportedByUser_s969932972038319.MSD.MyInfoRectangleCopy4View
                android:layout_width="71.07px"
                android:layout_height="37.0px"
                android:id="@+id/mRectangleCopy4"
                android:layout_marginLeft="0.0px"
                android:layout_marginTop="0.35mm"
            />
    
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/mtext12_82010"
                android:textColor="@color/base_text"
                android:gravity="left"
                android:textSize="15.6dp"
                android:id="@+id/mText12"
                android:layout_marginLeft="0.35mm"
                android:layout_marginTop="2.03mm"
            />
    
            <com.neonto.exportedByUser_s969932972038319.MSD.MyInfoImageCopyView
                android:layout_width="256.0px"
                android:layout_height="145.0px"
                android:id="@+id/mImageCopy"
                android:layout_marginLeft="64.0px"
                android:layout_marginTop="2.26mm"
            />
    
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/mtext15_566210"
                android:textColor="@color/base_text"
                android:gravity="left"
                android:textSize="11.7dp"
                android:id="@+id/mText15"
                android:layout_marginLeft="64.0px"
                android:layout_marginTop="0.0mm"
            />
    
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/mtext14_711933"
                android:textColor="@color/base_text"
                android:gravity="left"
                android:textSize="13.7dp"
                android:textStyle="bold"
                android:id="@+id/mText14"
                android:layout_marginLeft="72.0px"
                android:layout_marginTop="0.0mm"
            />
    
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/mtext16_347280"
                android:textColor="@color/base_text"
                android:gravity="left"
                android:textSize="11.7dp"
                android:id="@+id/mText16"
                android:layout_marginLeft="74.0px"
                android:layout_marginTop="0.0mm"
            />
    
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/mtext17_718137"
                android:textColor="@color/base_text"
                android:gravity="right"
                android:textSize="11.7dp"
                android:id="@+id/mText17"
                android:layout_marginLeft="72.0px"
                android:layout_marginTop="0.01mm"
            />
    
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/action"
                android:gravity="left|center_vertical"
                android:textSize="0.0dp"
                android:background="?android:attr/selectableItemBackground"
                android:id="@+id/mHotspot"
                android:layout_marginLeft="51.0px"
                android:layout_marginTop="0.0mm"
            />
    
            <com.neonto.exportedByUser_s969932972038319.MSD.MyInfoImage4View
                android:layout_width="256.0px"
                android:layout_height="145.0px"
                android:id="@+id/mImage4"
                android:layout_marginLeft="370.0px"
                android:layout_marginTop="0.0mm"
            />
    
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/mtext18_186965"
                android:textColor="@color/base_text"
                android:gravity="left"
                android:textSize="11.7dp"
                android:id="@+id/mText18"
                android:layout_marginLeft="367.0px"
                android:layout_marginTop="0.18mm"
            />
    
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/mtext1_326016"
                android:textColor="@color/base_text"
                android:gravity="left"
                android:textSize="13.7dp"
                android:textStyle="bold"
                android:id="@+id/mText1"
                android:layout_marginLeft="370.0px"
                android:layout_marginTop="0.03mm"
            />
    
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/mtext20_1047403"
                android:textColor="@color/base_text"
                android:gravity="left"
                android:textSize="11.7dp"
                android:id="@+id/mText20"
                android:layout_marginLeft="373.0px"
                android:layout_marginTop="0.0mm"
            />
    
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/mtext21_669688"
                android:textColor="@color/base_text"
                android:gravity="right"
                android:textSize="11.7dp"
                android:id="@+id/mText21"
                android:layout_marginLeft="375.0px"
                android:layout_marginTop="0.43mm"
            />
    
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/action"
                android:gravity="left|center_vertical"
                android:textSize="0.0dp"
                android:background="?android:attr/selectableItemBackground"
                android:id="@+id/mHotspot2"
                android:layout_marginLeft="360.0px"
                android:layout_marginTop="0.0mm"
            />
    
      </RelativeLayout>
    </ScrollView>
    
        <com.neonto.exportedByUser_s969932972038319.MSD.MyInfoImage2View
            android:layout_width="719.0px"
            android:layout_height="144.0px"
            android:id="@+id/mImage2"
            android:layout_marginLeft="0.0mm"
            android:layout_marginTop="0.88mm"
        />
    
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/action"
            android:gravity="left|center_vertical"
            android:textSize="0.0dp"
            android:src="@drawable/button_icon50400"
            android:scaleType="fitStart"
            android:background="?android:attr/selectableItemBackground"
            android:paddingLeft="4.3px"
            android:paddingRight="4.3px"
            android:id="@+id/mIconButton"
            android:layout_marginLeft="0.82mm"
            android:layout_marginTop="6.44mm"
        />
    
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/mtext9_830773"
            android:textColor="@color/base_text"
            android:gravity="left"
            android:textSize="19.6dp"
            android:id="@+id/mText9"
            android:layout_marginLeft="22.46mm"
            android:layout_marginTop="7.08mm"
        />
    
</RelativeLayout>
